--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,19 @@
   <link rel="stylesheet" href="./src/styles/index.css">
   <title>WordsApp</title>
 </head>
+
 <body>
+
+  <main>
+    <section class="words-section">
+      <div class="eng-word"></div>
+      <img class="renew-icon" src="./accets/icons/renew.svg" alt="">
+      <div class="deu-word"></div>
+    </section>
+  </main>
+
   <script type="module" src="./src/scripts/index.js"></script>
+
 </body>
+
 </html>
